// protoc -I . message.proto --go_out=. --go-grpc_out=.
syntax = "proto3";
option go_package = ".;douyin_extra_second";
package douyin.extra.second;
service Message{
  rpc MessageChat(MessageChatRequest) returns (MessageChatResponse);
  rpc MessageSend(MessageSendRequest) returns (MessageSendResponse);
}
message MessageChatRequest {
  int64 user_id = 1; // 用户id
  int64 to_user_id = 2; // 对方用户id
}

message MessageChatResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated MessageInfo message_list = 3; // 消息列表
}

message MessageInfo {
  int64 id = 1; // 消息id
  int64 to_user_id = 2; // 该消息接收者的id
  int64 from_user_id = 3; // 该消息发送者的id
  string content = 4; // 消息内容
  optional string create_time = 5; // 消息创建时间
}

message MessageSendRequest {
  int64 user_id = 1; // 用户id
  int64 to_user_id = 2; // 对方用户id
  string content = 3; // 消息内容
}

message MessageSendResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}